# LuckyBackend

./: .gitignore  docker-compose.yml
lucky_api/: .env.example  Dockerfile  pyproject.toml
lucky_api/api/: urls.py
lucky_api/api/authentication/: urls.py
lucky_api/api/authentication/serializers/: auth.py  users.py
lucky_api/api/authentication/services/: siwe.py
lucky_api/api/authentication/views/: auth.py
lucky_api/api/games/: urls.py
lucky_api/api/games/views/: webhook_up_vs_down.py
lucky_api/api/utils/: custom_response.py
lucky_api/apps/accounts/: admin.py
lucky_api/apps/accounts/migrations/: 0001_initial.py
lucky_api/apps/accounts/models/: __init__.py  users.py  wallet_nonce.py
lucky_api/apps/games/: admin.py
lucky_api/apps/games/migrations/: 0001_initial.py  0002_alter_upvsdowngamehistory_game_id_and_more.py
lucky_api/apps/games/models/: __init__.py  all_game_history.py  up_vs_down.py
lucky_api/apps/ranks/: apps.py
lucky_api/apps/ranks/models/: ranks.py
lucky_api/apps/trees/: apps.py
lucky_api/apps/trees/models/: __init__.py  circle_tree.py  matrix_tree.py
lucky_api/apps/trees/utils/: circle_tree.py  matrix_tree.py
lucky_api/config/: settings.py
lucky_websocket/: Dockerfile  config.py  debug.py  fastapi_context_manifest.md  main.py  old_main.py
lucky_websocket/contract/: abi.py  client.py  helpers.py
lucky_websocket/django_client/: poster.py
lucky_websocket/game/: loop.py  state.py
lucky_websocket/price/: binance.py  buffer.py
lucky_websocket/ws/: manager.py
nginx/: nginx.conf
